Fixed bugs in the website.

--- a/download.html
+++ b/download.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <title>Home | Reunion7</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" href="Assets/icon.png">
         <link rel="stylesheet" href="styles.css">
     </head>
@@ -17,8 +19,8 @@
                 <div class="bottom-header">
                     <img src="Assets/long-logo.svg" alt="Reunion Logo" class="reunion-logo">
                     <div class="navlinks">
-                        <a href="#" class="link-selected">Home</a>
-                        <a href="#">Download</a>
+                        <a href="index.html">Home</a>
+                        <a href="download.html" class="link-selected">Download</a>
                         <a href="#">Discover Reunion</a>
                         <a href="#">Credits</a>
                     </div>
@@ -26,39 +28,26 @@
             </div>
             <div class="content">
                 <div class="banner-content-download">
-                    <h1 class="header-banner">Introducting<br>
-                        Reunion7. </h1>
-                    <p class="pg-banner">Reunion7, created by the creator of Reloaded7 and Classic 7 is a mod<br>
-                       based of Windows 10 LTSC 2021 that replicates Windows 7.</p>
+                    <h1 class="header-banner">Get Reunion7 and party<br>
+                                              like it's 2009.</h1>
+                    <p class="pg-banner">Reunion7 manages to get the most accurate feeling<br>
+                                         of Windows 7 so you cannot feel a difference.</p>
                 </div>
             </div>
             <div class="real-content">
                 <div class="content-cards">
-                    <h1 class="card-header">Modification features</h1>
+                    <h1 class="card-header">Versions of Reunion7</h1>
                     <div class="cards">
                         <div class="card">
-                            <img src="Assets/theme.png" class="showcase-img">
-                            <a href="#" class="card-header-link">Gadgets and themes</a>
-                            <p>Our modification restores classic gadgets and themes from Windows 7.</p>
+                            <img src="Assets/official-rel.png" class="showcase-img">
+                            <a href="https://drive.google.com/file/d/1C2s5U6E0LxtoT6u0zniloNEyG_fuNQBB/view?usp=drive_link" class="card-header-link">Reunion7 (Official)</a>
+                            <p>Release 12:: Older version</p>
                         </div>
                         <div class="card">
-                            <img src="Assets/hw.png" class="showcase-img">
-                            <a href="#" class="card-header-link">Got new hardware?</a>
-                            <p>No worries! Reunion7 supports new hardware unlike Windows 7. You can use it on the latest hardware available!</p>
+                            <img src="Assets/unofficial-rel.png" class="showcase-img">
+                            <a href="https://drive.usercontent.google.com/download?id=1e-3awcBzYfnXfsVX4fl9TbGLIsuZfvsG" class="card-header-link">Reunion7 (Unofficial)</a>
+                            <p>Release 12.6.4:: Newer version</p>
                         </div>
-                        <div class="card">
-                            <img src="Assets/dsc.png" class="showcase-img">
-                            <a href="#" class="card-header-link">Need support?</a>
-                            <p>Our great community on <a href="#">Discord</a> can help you out at any time if you need assistance with anything!</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="extras">
-                    <h1 class="addons-header">Addons</h1>
-                    <div class="list">
-                        <ul>
-                            <li><a href="https://reloadedwin.neocities.org/wls.htm">Windows Live Essentials</a></li>
-                        </ul>
                     </div>
                 </div>
             </div>
