--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <title>Home | Reunion7</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" href="Assets/icon.png">
         <link rel="stylesheet" href="styles.css">
     </head>
@@ -17,8 +19,8 @@
                 <div class="bottom-header">
                     <img src="Assets/long-logo.svg" alt="Reunion Logo" class="reunion-logo">
                     <div class="navlinks">
-                        <a href="#" class="link-selected">Home</a>
-                        <a href="#">Download</a>
+                        <a href="index.html" class="link-selected">Home</a>
+                        <a href="download.html">Download</a>
                         <a href="#">Discover Reunion</a>
                         <a href="#">Credits</a>
                     </div>
@@ -26,15 +28,15 @@
             </div>
             <div class="content">
                 <div class="banner-content">
-                    <h1 class="header-banner">Get Reunion7 and party<br>
-                                              like it's 2009.</h1>
-                    <p class="pg-banner">Reunion7 manages to get the most accurate feeling<br>
-                                         of Windows 7 so you cannot feel a difference.</p>
+                    <h1 class="header-banner">Introducting<br>
+                        Reunion7.</h1>
+                    <p class="pg-banner">Reunion7, created by the creator of Reloaded7 and Classic 7 is a mod<br>
+                       based of Windows 10 LTSC 2021 that replicates Windows 7.</p>
                     <a href="download.html" class="download-button">Download now</a>
                 </div>
             </div>
             <div class="real-content">
-                <div class="content-cards">
+                <div class="content-cards-main">
                     <h1 class="card-header">Modification features</h1>
                     <div class="cards">
                         <div class="card">
@@ -58,7 +60,7 @@
                     <h1 class="addons-header">Addons</h1>
                     <div class="list">
                         <ul>
-                            <li><a href="https://reloadedwin.neocities.org/wls.htm">Windows Live Essentials</a></li>
+                            <li><a href="https://escargot.chat">Windows Live Messenger</a></li>
                         </ul>
                     </div>
                 </div>
