Fix more bugs in styling.

--- a/download.html
+++ b/download.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Home | Reunion7</title>
+        <title>Downloads | Reunion7</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" href="Assets/icon.png">
@@ -35,7 +35,7 @@
                 </div>
             </div>
             <div class="real-content">
-                <div class="content-cards">
+                <div class="content-cards-download">
                     <h1 class="card-header">Versions of Reunion7</h1>
                     <div class="cards">
                         <div class="card">
