--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </div>
             </div>
             <div class="real-content">
-                <div class="content-cards-main">
+                <div class="content-cards">
                     <h1 class="card-header">Modification features</h1>
                     <div class="cards">
                         <div class="card">
