Add SEO information

--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html>
     <head>
         <title>Home | Reunion7</title>
+        <meta property="og:title" content="Reunion7">
+        <meta property="og:description" content="Welcome to Reunion7, The Windows mod that aims to be 1:1 with 7.">
+        <meta property="og:image" content="https://reunion7.com/Assets/seo.png">
+        <meta property="og:url" content="https://reunion7.com">
+        <meta property="og:type" content="website">
+        <meta property="og:site_name" content="Reunion7">    
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" href="Assets/icon.png">
