Credits and 404 page and some other cool changes.

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
                     <img src="Assets/long-logo.svg" alt="Reunion Logo" class="reunion-logo">
                     <div class="navlinks">
                         <a href="index.html" class="link-selected">Home</a>
-                        <a href="download.html">Download</a>
+                        <a href="downloads.html">Download</a>
                         <a href="#">Discover Reunion</a>
-                        <a href="#">Credits</a>
+                        <a href="credits.html">Credits</a>
                     </div>
                 </div>
             </div>
