I love making sites.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         Reunion7.</h1>
                     <p class="pg-banner">Reunion7, created by the creator of Reloaded7 and Classic 7 is a mod<br>
                        based of Windows 10 LTSC 2021 that replicates Windows 7.</p>
-                    <a href="download.html" class="download-button">Download now</a>
+                    <a href="downloads.html" class="download-button">Download now</a>
                 </div>
             </div>
             <div class="real-content">
