--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="banner-content">
                     <h1 class="header-banner">Introducting<br>
                         Reunion7.</h1>
-                    <p class="pg-banner">Reunion7, created by the creator of Reloaded7 and Classic 7 is a mod<br>
+                    <p class="pg-banner">Reunion7, created by the creators of Reloaded7 and Classic 7 is a mod<br>
                        based of Windows 10 LTSC 2021 that replicates Windows 7.</p>
                     <a href="downloads.html" class="download-button">Download now</a>
                 </div>
