Add some extras

--- a/credits.html
+++ b/credits.html
@@ -25,10 +25,11 @@
                 <div class="bottom-header">
                     <img src="Assets/long-logo.svg" alt="Reunion Logo" class="reunion-logo">
                     <div class="navlinks">
-                        <a href="index.html">Home</a>
+                        <a href="/">Home</a>
                         <a href="downloads.html">Download</a>
-                        <a href="#">Discover Reunion</a>
                         <a href="credits.html" class="link-selected">Credits</a>
+                        <a href="https://github.com/reunion-7-mod">GitHub</a>
+                        <a href="https://discord.gg/dXVHnz2My9">Discord</a>
                     </div>
                 </div>
             </div>
@@ -41,7 +42,7 @@
                     <ul>
                         <li><b>Team</b> - English and Russian versions of Reunion7</li>
                         <li><b>patricktbp</b> - Co-owner / Partner of Reunion7 and creator this new rewritten site</li>
-                        <li><b>Tech Stuff</b> - Hosting the website</li>
+                        <li><b>Tech Stuff</b> - Site configurer</li>
                         <li><b>spawnerpl</b> - Developing the website concept.</li>
                         <li><b>Microsoft</b> - The Windows product and the original website.</li>
                     </ul>
