--- a/downloads.html
+++ b/downloads.html
@@ -27,8 +27,9 @@
                     <div class="navlinks">
                         <a href="index.html">Home</a>
                         <a href="downloads.html" class="link-selected">Download</a>
-                        <a href="#">Discover Reunion</a>
                         <a href="credits.html">Credits</a>
+                        <a href="https://github.com/reunion-7-mod">GitHub</a>
+                        <a href="https://discord.gg/dXVHnz2My9">Discord</a>
                     </div>
                 </div>
             </div>
