--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
                 <div class="bottom-header">
                     <img src="Assets/long-logo.svg" alt="Reunion Logo" class="reunion-logo">
                     <div class="navlinks">
-                        <a href="index.html" class="link-selected">Home</a>
+                        <a href="/" class="link-selected">Home</a>
                         <a href="downloads.html">Download</a>
-                        <a href="#">Discover Reunion</a>
                         <a href="credits.html">Credits</a>
+                        <a href="https://github.com/reunion-7-mod">GitHub</a>
+                        <a href="https://discord.gg/dXVHnz2My9">Discord</a>
                     </div>
                 </div>
             </div>
