fix grammatical error

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
             <div class="content">
                 <div class="banner-content">
-                    <h1 class="header-banner">Introducting<br>
+                    <h1 class="header-banner">Introducing<br>
                         Reunion7.</h1>
                     <p class="pg-banner">Reunion7, created by the creators of Reloaded7 and Classic 7 is a mod<br>
                        based of Windows 10 LTSC 2021 that replicates Windows 7.</p>
