fixing a grammatical error and changing credits stuff

--- a/credits.html
+++ b/credits.html
@@ -40,10 +40,10 @@
                 <h2>Authors</h2>
                 <div class="list">
                     <ul>
-                        <li><b>Team</b> - English and Russian versions of Reunion7</li>
-                        <li><b>patricktbp</b> - Co-owner / Partner of Reunion7 and creator this new rewritten site</li>
+                        <li><b>Team</b> - English and Russian versions of Reunion7, adding a lot of stuff to the legacy website</li>
+                        <li><b>patricktbp</b> - Co-owner / Partner of Reunion7 and creator of the new rewritten site</li>
                         <li><b>Tech Stuff</b> - Site configurer</li>
-                        <li><b>spawnerpl</b> - Developing the website concept.</li>
+                        <li><b>spawnerpl</b> - Helping with the legacy website.</li>
                         <li><b>Microsoft</b> - The Windows product and the original website.</li>
                     </ul>
                 </div>
