how did i not notice this

--- a/credits.html
+++ b/credits.html
@@ -35,7 +35,7 @@
             </div>
             <div class="content-padded footer-credits">
                 <h1>Credits</h1>
-                <p class="credit-pg">All of these people here have made community findings that have helped Reunion7 is some way shape or form.</p>
+                <p class="credit-pg">All of these people here have made community findings that have helped Reunion7, in any way, shape or form.</p>
     
                 <h2>Authors</h2>
                 <div class="list">
