New and updated pages
Adding LOTS of new content to the pages, animations, bug fixes, and class changes

--- a/index.html
+++ b/index.html
@@ -15,19 +15,23 @@
     </head>
     <body>
         <div class="body-content">
+            <div class="nav-gradient"></div>
+            <div class="nav-banner"></div>
+            
             <div class="navbar">
                 <div class="top-header">
                     <p class="language-header">United States</p>
-                    <a href="#">Change</a>
+                    <a href="region.html">Change</a>
                     |
-                    <a href="#">Other projects</a>
+                    <a href="projects.html">Other projects</a>
                 </div>
                 <div class="bottom-header">
                     <img src="Assets/long-logo.svg" alt="Reunion Logo" class="reunion-logo">
                     <div class="navlinks">
                         <a href="/" class="link-selected">Home</a>
-                        <a href="downloads.html">Download</a>
+                        <a href="downloads.html">Downloads</a>
                         <a href="credits.html">Credits</a>
+                        <a href="changelog.html">Changelog</a>
                         <a href="https://github.com/reunion-7-mod">GitHub</a>
                         <a href="https://discord.gg/dXVHnz2My9">Discord</a>
                     </div>
