Revert "New and updated pages"
This reverts commit 0a8188c665b4e5af64c094284397ff8b088524e8.

--- a/credits.html
+++ b/credits.html
@@ -14,47 +14,42 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <div class="body-content credits">
-            <div class="nav-gradient"></div>
-            <div class="nav-banner"></div>
-
+        <div class="body-content-credits">
             <div class="navbar">
                 <div class="top-header">
                     <p class="language-header">United States</p>
-                    <a href="region.html">Change</a>
+                    <a href="#">Change</a>
                     |
-                    <a href="projects.html">Other projects</a>
+                    <a href="#">Other projects</a>
                 </div>
                 <div class="bottom-header">
                     <img src="Assets/long-logo.svg" alt="Reunion Logo" class="reunion-logo">
                     <div class="navlinks">
-                        <a href="index.html">Home</a>
-                        <a href="downloads.html">Downloads</a>
+                        <a href="/">Home</a>
+                        <a href="downloads.html">Download</a>
                         <a href="credits.html" class="link-selected">Credits</a>
-                        <a href="changelog.html">Changelog</a>
                         <a href="https://github.com/reunion-7-mod">GitHub</a>
                         <a href="https://discord.gg/dXVHnz2My9">Discord</a>
                     </div>
                 </div>
             </div>
             <div class="content-padded footer-credits">
-                <h1 class="credit-subtitle">Credits</h1>
+                <h1>Credits</h1>
                 <p class="credit-pg">All of these people here have made community findings that have helped Reunion7, in any way, shape or form.</p>
     
-                <h2 class="credit-subtitle">Authors</h2>
-                <div class="list credit">
+                <h2>Authors</h2>
+                <div class="list">
                     <ul>
                         <li><b>Team</b> - English and Russian versions of Reunion7, adding a lot of stuff to the legacy website</li>
                         <li><b>patricktbp</b> - Co-owner / Partner of Reunion7 and creator of the new rewritten site</li>
                         <li><b>Tech Stuff</b> - Site configurer</li>
-                        <li><b>Bread</b> - Helping with the new website.</li>
                         <li><b>spawnerpl</b> - Helping with the legacy website.</li>
                         <li><b>Microsoft</b> - The Windows product and the original website.</li>
                     </ul>
                 </div>
 
-                <h2 class="credit-subtitle">Windhawk Mods</h2>
-                <div class="list credit">
+                <h2>Windhawk Mods</h2>
+                <div class="list">
                     <ul>
                         <li><b>aubymori</b> - Lots and lots of Windhawk mods!</li>
                         <li><b>Joleman11</b> - Disable the Windows 8+ OSD.</li>
@@ -69,8 +64,8 @@
                     </ul>
                 </div>
 
-                <h2 class="credit-subtitle">System</h2>
-                <div class="list credit">
+                <h2>System</h2>
+                <div class="list">
                     <ul>
                         <li><b>AlTaleX531</b> - OpenGlass.</li>
                         <li><b>Dulappy</b> - AWM.</li>
@@ -93,8 +88,8 @@
                     </ul>
                 </div>
 
-                <h2 class="credit-subtitle">Extra credits</h2>
-                <div class="list credit">
+                <h2>Extra credits</h2>
+                <div class="list">
                     <ul>
                         <li><b>Oleg</b> - Continuing the project as an unofficial series.</li>
                         <li><b>FancyDoggy</b> - Quality control, bug fixes, and maintenance of the unofficial series, tech assistance.</li>
